Vanilla-Hammers: Add Curse of Gigantism

--- a/vanilla-hammers/src/main/resources/configs/diamond_hammer.yml
+++ b/vanilla-hammers/src/main/resources/configs/diamond_hammer.yml
@@ -18,4 +18,4 @@ repair_ingredient: "minecraft:diamond"
 
 # Enchantable Options
 enchantment_value: 10
-enchantment_categories: ["digger", "breakable"]
+enchantment_categories: ["vanilla_hammers:hammer", "minecraft:digger", "minecraft:breakable"]
