--- a/vanilla-hammers/src/main/resources/configs/wooden_hammer.yml
+++ b/vanilla-hammers/src/main/resources/configs/wooden_hammer.yml
@@ -18,7 +18,7 @@ repair_ingredient: "#minecraft:planks"
 
 # Enchantable Options
 enchantment_value: 15
-enchantment_categories: ["digger", "breakable"]
+enchantment_categories: ["vanilla_hammers:hammer", "minecraft:digger", "minecraft:breakable"]
 
 # Fuel Options
 burn_time: 400
