--- a/vanilla-hammers/src/main/resources/configs/golden_hammer.yml
+++ b/vanilla-hammers/src/main/resources/configs/golden_hammer.yml
@@ -18,4 +18,4 @@ repair_ingredient: "minecraft:gold_ingot"
 
 # Enchantable Options
 enchantment_value: 22
-enchantment_categories: ["digger", "breakable"]
+enchantment_categories: ["vanilla_hammers:hammer", "minecraft:digger", "minecraft:breakable"]
