--- a/vanilla-hammers/src/main/resources/configs/lapis_hammer.yml
+++ b/vanilla-hammers/src/main/resources/configs/lapis_hammer.yml
@@ -18,4 +18,4 @@ repair_ingredient: "minecraft:lapis_lazuli"
 
 # Enchantable Options
 enchantment_value: 30
-enchantment_categories: ["digger", "breakable"]
+enchantment_categories: ["vanilla_hammers:hammer", "minecraft:digger", "minecraft:breakable"]
