--- a/machines/src/main/resources/configs/star_sword.yml
+++ b/machines/src/main/resources/configs/star_sword.yml
@@ -16,8 +16,12 @@ repair_ingredient: machines:star_crystal
 # Enchantable Options
 enchantment_value: 10
 supported_enchantments:
-  - minecraft:efficiency
-  - minecraft:silk_touch
-  - minecraft:fortune
+  - minecraft:sharpness
+  - minecraft:smite
+  - minecraft:bane_of_arthropods
+  - minecraft:knockback
+  - minecraft:fire_aspect
+  - minecraft:looting
+  - minecraft:sweeping
   - minecraft:unbreaking
   - minecraft:mending
