--- a/.github/workflows/build-addons.yml
+++ b/.github/workflows/build-addons.yml
@@ -38,9 +38,9 @@ jobs:
 
       - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: Jetpacks
           path: artifacts/
   
   build-logistics:
@@ -73,9 +73,9 @@ jobs:
 
       - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: Logistics
           path: artifacts/
   
   build-machines:
@@ -108,9 +108,9 @@ jobs:
 
       - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: Machines
           path: artifacts/
   
   build-simple-upgrades:
@@ -143,9 +143,9 @@ jobs:
 
       - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: Simple-Upgrades
           path: artifacts/
   
   build-vanilla-hammers:
@@ -178,7 +178,7 @@ jobs:
 
       - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
+          name: Vanilla-Hammers
           path: artifacts/
