--- a/.github/workflows/build-addons.yml
+++ b/.github/workflows/build-addons.yml
@@ -8,8 +8,7 @@ on:
     types: [ created ]
 
 jobs:
-  build-jetpacks:
-    name: Build Jetpacks
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -22,163 +21,23 @@ jobs:
           distribution: adopt
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            jetpacks:addonJar
-            -PoutDir=../artifacts/
-        env:
-          ORG_GRADLE_PROJECT_xenondevsNmsUsername: ${{ secrets.XENONDEVS_NMS_USERNAME }}
-          ORG_GRADLE_PROJECT_xenondevsNmsPassword: ${{ secrets.XENONDEVS_NMS_PASSWORD }}
-
+        uses: gradle/actions/setup-gradle@v4
+        
+      - name: Build Addons
+        run: ./gradlew addonJar -PoutDir=../artifacts/
+          
       - name: Upload Artifacts
-        id: upload
         uses: actions/upload-artifact@v4
         with:
-          name: Jetpacks
-          path: artifacts/
-  
-  build-logistics:
-    name: Build Logistics
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+          name: Artifacts
+          path: ./artifacts/*.jar
 
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: 21
-          distribution: adopt
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            logistics:addonJar
-            -PoutDir=../artifacts/
+      - name: Deploy to plugin repositories
+        if: ${{ github.event_name == 'release' }}
+        run: ./gradlew pluginPublish --githubReleaseId ${{ github.event.release.id }}
         env:
-          ORG_GRADLE_PROJECT_xenondevsNmsUsername: ${{ secrets.XENONDEVS_NMS_USERNAME }}
-          ORG_GRADLE_PROJECT_xenondevsNmsPassword: ${{ secrets.XENONDEVS_NMS_PASSWORD }}
-
-      - name: Upload Artifacts
-        id: upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: Logistics
-          path: artifacts/
-  
-  build-machines:
-    name: Build Machines
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: 21
-          distribution: adopt
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            machines:addonJar
-            -PoutDir=../artifacts/
-        env:
-          ORG_GRADLE_PROJECT_xenondevsNmsUsername: ${{ secrets.XENONDEVS_NMS_USERNAME }}
-          ORG_GRADLE_PROJECT_xenondevsNmsPassword: ${{ secrets.XENONDEVS_NMS_PASSWORD }}
-
-      - name: Upload Artifacts
-        id: upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: Machines
-          path: artifacts/
-  
-  build-simple-upgrades:
-    name: Build Simple-Upgrades
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: 21
-          distribution: adopt
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            simple-upgrades:addonJar
-            -PoutDir=../artifacts/
-        env:
-          ORG_GRADLE_PROJECT_xenondevsNmsUsername: ${{ secrets.XENONDEVS_NMS_USERNAME }}
-          ORG_GRADLE_PROJECT_xenondevsNmsPassword: ${{ secrets.XENONDEVS_NMS_PASSWORD }}
-
-      - name: Upload Artifacts
-        id: upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: Simple-Upgrades
-          path: artifacts/
-  
-  build-vanilla-hammers:
-    name: Build Vanilla-Hammers
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set Up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: 21
-          distribution: adopt
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          cache-disabled: true
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            vanilla-hammers:addonJar
-            -PoutDir=../artifacts/
-        env:
-          ORG_GRADLE_PROJECT_xenondevsNmsUsername: ${{ secrets.XENONDEVS_NMS_USERNAME }}
-          ORG_GRADLE_PROJECT_xenondevsNmsPassword: ${{ secrets.XENONDEVS_NMS_PASSWORD }}
-
-      - name: Upload Artifacts
-        id: upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: Vanilla-Hammers
-          path: artifacts/
+          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+          DISCORD_WEBHOOK_ID: ${{ secrets.DISCORD_WEBHOOK_ID }}
+          DISCORD_WEBHOOK_TOKEN: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          HANGAR_API_KEY: ${{ secrets.HANGAR_API_KEY }}
